Добавлен компонентный подход

--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Parcel Handlebars Precompile</title>
-    <script type="module" src="index.js"></script>
+    <script type="module" src="index.ts"></script>
     <script src="https://kit.fontawesome.com/e106c8f635.js" crossorigin="anonymous"></script>
 </head>
 <body>
