--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,6 @@
     <script src="https://kit.fontawesome.com/e106c8f635.js" crossorigin="anonymous"></script>
 </head>
 <body>
-  <div id="app"></div>
+  <main id="app"></main>
 </body>
 </html>
